# subleq

./: CMakeLists.txt  Makefile  main.cpp  parser.cpp  subleq.hpp
inc/: parser.hpp  subleq.hpp
src/: main.cpp  subleq.cpp
tests/: test.cpp
tests/asm/: addition.asm  cat.asm  sequence_reverser.asm  subtraction.asm
